# esp32-c6-lp-coremark

./: .clang-format  .gitignore  .gitmodules  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32c6
main/: CMakeLists.txt  main.cpp
main/ulp/: CMakeLists.txt  core_portme.c  core_portme.h
main/ulp/cmake/: ulp_tools.cmake
